--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Tic-Tac-Toe</h1>
+    <div id="gameboard"></div>
+    <div id="controls">
+        <input type="text" id="player1" placeholder="Player 1">
+        <input type="text" id="player2" placeholder="Player 2">
+        <button id="start-button">Start Game</button>
+        <button id="restart-button">Restart Game</button>
+    </div>
+    <div id="message"></div>
+    <div id="result-display"></div>
 
 <script src="script.js"></script>
 </body>
